[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Icons/save.png" type="Texture" id=1]
[ext_resource path="res://Assets/Icons/file.png" type="Texture" id=2]
[ext_resource path="res://Assets/Icons/open.png" type="Texture" id=3]
[ext_resource path="res://Assets/Icons/save_as.png" type="Texture" id=4]
[ext_resource path="res://Assets/Icons/credits.png" type="Texture" id=5]
[ext_resource path="res://Assets/Icons/settings.png" type="Texture" id=6]
[ext_resource path="res://Assets/Icons/power.png" type="Texture" id=7]
[ext_resource path="res://Assets/Scripts/main.gd" type="Script" id=8]
[ext_resource path="res://Assets/Fonts/DroidSansMono.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=2]
size = 13
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0, 0, 0.0784314 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 0.046
margin_bottom = 5.16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="TopBar"]
anchor_left = 0.031
anchor_top = 0.2
anchor_right = 0.969
anchor_bottom = 0.8
margin_left = -29.76
margin_top = -6.0
margin_right = 29.7599
margin_bottom = 6.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New" type="Button" parent="TopBar/Container"]
margin_left = 202.0
margin_right = 268.0
margin_bottom = 30.0
hint_tooltip = "Create a new file."
mouse_default_cursor_shape = 2
text = "New"
icon = ExtResource( 2 )

[node name="Open" type="Button" parent="TopBar/Container"]
margin_left = 272.0
margin_right = 345.0
margin_bottom = 30.0
hint_tooltip = "Open an existing file."
mouse_default_cursor_shape = 2
text = "Open"
icon = ExtResource( 3 )

[node name="Save" type="Button" parent="TopBar/Container"]
margin_left = 349.0
margin_right = 416.0
margin_bottom = 30.0
hint_tooltip = "Save changes to your current file."
mouse_default_cursor_shape = 2
text = "Save"
icon = ExtResource( 1 )

[node name="SaveAs" type="Button" parent="TopBar/Container"]
margin_left = 420.0
margin_right = 507.0
margin_bottom = 30.0
hint_tooltip = "Save your current file as a new file."
mouse_default_cursor_shape = 2
text = "Save As"
icon = ExtResource( 4 )

[node name="Settings" type="Button" parent="TopBar/Container"]
margin_left = 511.0
margin_right = 600.0
margin_bottom = 30.0
hint_tooltip = "Open the settings menu."
mouse_default_cursor_shape = 2
text = "Settings"
icon = ExtResource( 6 )

[node name="Credits" type="Button" parent="TopBar/Container"]
margin_left = 604.0
margin_right = 687.0
margin_bottom = 30.0
hint_tooltip = "Show the credits."
mouse_default_cursor_shape = 2
text = "Credits"
icon = ExtResource( 5 )

[node name="Quit" type="Button" parent="TopBar/Container"]
margin_left = 691.0
margin_right = 757.0
margin_bottom = 30.0
hint_tooltip = "Close the application."
mouse_default_cursor_shape = 2
text = "Quit"
icon = ExtResource( 7 )

[node name="TextEdit" type="TextEdit" parent="."]
anchor_top = 0.055
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.299999
custom_fonts/font = SubResource( 2 )
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
breakpoint_gutter = true
fold_gutter = true
highlight_all_occurrences = true
smooth_scrolling = true
minimap_draw = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenFile" type="FileDialog" parent="."]
margin_left = 240.0
margin_top = 135.0
margin_right = 720.0
margin_bottom = 405.0
mouse_default_cursor_shape = 2
window_title = "Open a File"
resizable = true
mode = 0
access = 2
show_hidden_files = true
current_dir = "/Users/Flexy_GG1/Documents"
current_file = "Documents"
current_path = "/Users/Flexy_GG1/Documents/Documents"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveFileAs" type="FileDialog" parent="."]
margin_left = 240.0
margin_top = 135.0
margin_right = 720.0
margin_bottom = 405.0
mouse_default_cursor_shape = 2
window_title = "Save File As"
access = 2
show_hidden_files = true
current_dir = "/Users/Flexy_GG1/Documents"
current_file = "Untitled.code"
current_path = "/Users/Flexy_GG1/Documents/Untitled.code"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="WindowDialog" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 910.0
margin_bottom = 490.0
window_title = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="Credits"]
margin_right = 860.0
margin_bottom = 440.0
text = "IE Code by Ihsan Entertainment
Lincensed under CC BY SA.
GitHub (Source code and download): https://github.com/Ihsan-Entertainment/IE-Code

----------

Icons by Remixicon (https://remixicon.com)

----------

Code font: Droid Sans Mono

Copyright 2007 Ascender Corp.

Licensed under the Apache License, Version 2.0 (the \"License\");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an \"AS IS\" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

----------

This game uses Godot Engine, available under the following license:

Copyright (c) 2007-2021 Juan Linietsky, Ariel Manzur. Copyright (c) 2014-2021 Godot Engine contributors.

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the
\"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute,
sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following
conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE
WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE."
readonly = true
context_menu_enabled = false
shortcut_keys_enabled = false
virtual_keyboard_enabled = false
selecting_enabled = false
smooth_scrolling = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="WindowDialog" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 910.0
margin_bottom = 490.0
window_title = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowHeading" type="HBoxContainer" parent="Settings"]
margin_top = 2.5
margin_right = 860.0
margin_bottom = 22.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/WindowHeading"]
margin_left = 404.0
margin_top = 3.0
margin_right = 455.0
margin_bottom = 17.0
text = "Window"
align = 1
valign = 1

[node name="WindowWidth" type="OptionButton" parent="Settings"]
margin_top = 25.0
margin_right = 860.0
margin_bottom = 45.0
hint_tooltip = "Change the window width."
mouse_default_cursor_shape = 2
disabled = true
text = "Window Width"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowHeight" type="OptionButton" parent="Settings"]
margin_top = 50.0
margin_right = 860.0
margin_bottom = 70.0
mouse_default_cursor_shape = 2
disabled = true
text = "Window Height"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resizable" type="CheckButton" parent="Settings"]
margin_top = 65.0
margin_right = 860.0
margin_bottom = 105.0
mouse_default_cursor_shape = 2
disabled = true
pressed = true
text = "Resizable"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="CheckButton" parent="Settings"]
margin_top = 90.0
margin_right = 860.0
margin_bottom = 130.0
mouse_default_cursor_shape = 2
disabled = true
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlwayOnTop" type="CheckButton" parent="Settings"]
margin_top = 115.0
margin_right = 860.0
margin_bottom = 155.0
mouse_default_cursor_shape = 2
disabled = true
text = "Alway On Top"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vsync" type="CheckButton" parent="Settings"]
margin_top = 140.0
margin_right = 860.0
margin_bottom = 180.0
mouse_default_cursor_shape = 2
disabled = true
pressed = true
text = "Vsync"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Forbidden" type="Panel" parent="Settings"]
margin_top = 22.5
margin_right = 860.0
margin_bottom = 173.5
hint_tooltip = "Window settings not implemented yet."
mouse_default_cursor_shape = 8
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEditHeading" type="HBoxContainer" parent="Settings"]
margin_top = 190.0
margin_right = 860.0
margin_bottom = 210.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/TextEditHeading"]
margin_left = 404.0
margin_top = 3.0
margin_right = 455.0
margin_bottom = 17.0
text = "TextEdit"
align = 1
valign = 1

[node name="HighlightCurrentLine" type="CheckButton" parent="Settings"]
margin_top = 200.0
margin_right = 860.0
margin_bottom = 240.0
hint_tooltip = "Highlight the current line."
mouse_default_cursor_shape = 2
pressed = true
text = "Highlight Current Line"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SyntaxHighlighting" type="CheckButton" parent="Settings"]
margin_top = 225.0
margin_right = 860.0
margin_bottom = 265.0
mouse_default_cursor_shape = 2
pressed = true
text = "Syntax Highlighting (Experimental)"

[node name="LineNumbers" type="CheckButton" parent="Settings"]
margin_top = 250.0
margin_right = 860.0
margin_bottom = 290.0
mouse_default_cursor_shape = 2
pressed = true
text = "Show Line Numbers"

[node name="DrawTabs" type="CheckButton" parent="Settings"]
margin_top = 275.0
margin_right = 860.0
margin_bottom = 315.0
mouse_default_cursor_shape = 2
pressed = true
text = "Draw Tabs"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawSpaces" type="CheckButton" parent="Settings"]
margin_top = 300.0
margin_right = 860.0
margin_bottom = 340.0
mouse_default_cursor_shape = 2
text = "Draw Spaces"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineMarker" type="CheckButton" parent="Settings"]
margin_top = 325.0
margin_right = 860.0
margin_bottom = 365.0
mouse_default_cursor_shape = 2
pressed = true
text = "Line Marker"

[node name="FoldGutter" type="CheckButton" parent="Settings"]
margin_top = 350.0
margin_right = 860.0
margin_bottom = 390.0
mouse_default_cursor_shape = 2
pressed = true
text = "Fold Gutter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighligtAllOccurrences" type="CheckButton" parent="Settings"]
margin_top = 375.0
margin_right = 860.0
margin_bottom = 415.0
mouse_default_cursor_shape = 2
pressed = true
text = "Highlight All Occurrences"

[node name="Minimap" type="CheckButton" parent="Settings"]
margin_top = 400.0
margin_right = 860.0
margin_bottom = 440.0
mouse_default_cursor_shape = 2
pressed = true
text = "Minimap"

[connection signal="pressed" from="TopBar/Container/New" to="." method="new_file"]
[connection signal="pressed" from="TopBar/Container/Open" to="." method="open_file_button"]
[connection signal="pressed" from="TopBar/Container/Save" to="." method="save_file_button"]
[connection signal="pressed" from="TopBar/Container/SaveAs" to="." method="save_file_as_button"]
[connection signal="pressed" from="TopBar/Container/Settings" to="." method="settings_button"]
[connection signal="pressed" from="TopBar/Container/Credits" to="." method="credits_button"]
[connection signal="pressed" from="TopBar/Container/Quit" to="." method="quit_button"]
[connection signal="file_selected" from="OpenFile" to="." method="open_file"]
[connection signal="file_selected" from="SaveFileAs" to="." method="save_file_as"]
